2011-03-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (FilterLatex::GetNextToken):
	  - Replace partial copy using temporary null-termination with
	    strncpy() and strncat().
	  - Replace a risky strcpy() on overlapping buffers with memmove().
	  - Split an assignment in if-condition into sepearate statement,
	    for more readability.

2011-03-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/worddef.cpp (isSpace, isHex, isPunc):
	  - Replace decimal ASCII codes with char literals, for more
	    readability
	  - Simplify return expressions

2010-09-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::IsLeadChar): Also include PHINTHU,
	NIKHAHIT and YAMAKKAN in non-leading char list.

2009-04-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version suffix added.
	* src/wordseg.cpp (main, +Version): Add -V/--version to print version
	info, as suggested by Beamer User.
	* src/Makefile.am: Pass -DVERSION CFLAGS.

2009-04-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, NEWS:
	=== Version 0.4.0 ===

2009-04-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterrtf.h (FilterRTF::chgCharState, FilterRTF::isThaiChar):
	Declare utility functions as static members.

2009-04-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (WinMacNormal, MacOffsetLeft, MacOffsetLeftHigh,
	MacOffsetNormal, WinOffsetLeft, WinOffsetLeftHigh, WinOffsetNormal):
	Declare internal data as file-scoped.

	* src/filterlatex.h
	(FilterLatex::isLongTailChar, FilterLatex::idxVowelToneMark):
	Declare utility functions as static members.

	* src/filterlatex.cpp (FilterLatex::isLongTailChar):
	Eliminate unnecessary true/false conditional expression; simple boolean
	expression is enough.

	* src/filterlatex.cpp (FilterLatex::idxVowelToneMark):
	Check array index range before accessing, rather than after.
